Final test submission

--- a/Exam.ipynb
+++ b/Exam.ipynb
@@ -20546,11 +20546,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Response:\n",
+    "> Based on the distribution of grades depending on the lunch, we can conclude that nutrition is essential for the brain. With the standard lunch, students will get a more nutritious meal than the free/reduced. By analyzing the graph, we can agree that nutrients are related to performance. Hence, students with the standard meal will get a higher average score."
+   ]
   },
   {
    "cell_type": "markdown",
